Fix resource paths for Vercel deployment

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>游戏平台</title>
-  <link rel="stylesheet" href="public/css/styles.css">
-  <link rel="stylesheet" href="public/css/modern-ui.css">
+  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/modern-ui.css">
   <!-- 引入字体 -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -63,7 +63,7 @@
             
             <!-- 用户头像 -->
             <div class="avatar avatar-modern">
-              <img src="public/images/avatars/user1.jpg" alt="用户头像">
+              <img src="/images/avatars/user1.jpg" alt="用户头像">
             </div>
           </div>
         </nav>
@@ -175,8 +175,8 @@
   </div>
   
   <!-- 脚本 -->
-  <script src="public/js/icons.js"></script>
-  <script src="public/js/utils.js"></script>
+  <script src="/js/icons.js"></script>
+  <script src="/js/utils.js"></script>
   <script>
     // 等待DOM加载完成
     document.addEventListener('DOMContentLoaded', function() {
